Add responsive to site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="img/bluecube-logo.png" alt="Logo da BlueCube">
+                <img src="img/bc-logo.png" alt="Logo da BlueCube">
             </a>
             <nav class="header_menu grid-12">
                 <ul>
